Added unit tests, fixed typo in README.md and added section in README.md about running unit tests

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "mathops",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Contains functions implementing basic operators of Javascript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "pretest": "npm install",
+    "test": "./node_modules/mocha/bin/mocha test/test.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/Elzair/mathops/issues"
   },
-  "homepage": "https://github.com/Elzair/mathops"
+  "homepage": "https://github.com/Elzair/mathops",
+  "devDependencies": {
+    "mocha": "^1.21.4"
+  }
 }
